objects/ASI_HK_CRM_Promotion__c.object
<CustomObject>
    <description>ASI HK CRM - Promotion</description>
    <fields>
        <fullName>ASI_CRM_Channel__c</fullName>
        <label>Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LS</fullName>
                </value>
                <value>
                    <fullName>HBR</fullName>
                </value>
                <value>
                    <fullName>TOT</fullName>
                </value>
                <value>
                    <fullName>CR</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
                <value>
                    <fullName>SWS</fullName>
                </value>
                <value>
                    <fullName>CVS</fullName>
                </value>
                <value>
                    <fullName>HYPER</fullName>
                </value>
                <value>
                    <fullName>SUPER</fullName>
                </value>
                <value>
                    <fullName>MOT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Display_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Display_Setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Other_Channels__c</fullName>
        <label>Other Channels</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Type__c</fullName>
        <label>Outlet Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HEB</fullName>
                </value>
                <value>
                    <fullName>LEB</fullName>
                </value>
                <value>
                    <fullName>NIG</fullName>
                </value>
                <value>
                    <fullName>RES</fullName>
                </value>
                <value>
                    <fullName>TOT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_POSM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POSM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Plan_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan 1</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Promotions (Plan 1)</relationshipLabel>
        <relationshipName>Promotions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Plan_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan 2</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Promotions (Plan 2)</relationshipLabel>
        <relationshipName>Promotions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PromotionDetails__c</fullName>
        <label>Promotion Details</label>
        <summaryForeignKey>ASI_HK_CRM_Promotion_Detail__c.ASI_HK_CRM_Promotion__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Plan</label>
        <referenceTo>ASI_CRM_Promotion_Plan__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PurchaseDueDate__c</fullName>
        <label>Purchase Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>North 2</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>CVS</fullName>
                </value>
                <value>
                    <fullName>HYPER</fullName>
                </value>
                <value>
                    <fullName>SUPER</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SYS_Allow_Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SYS Allow Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SYS_Target_Less_Than_P12M_Avg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SYS Target Less Than P12M Avg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <formula>TEXT(ASI_CRM_Plan__r.ASI_MFM_Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TotalActualIncentiveValueCash__c</fullName>
        <label>Total Actual Incentive Value (Cash)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TotalActualIncentiveValueFOC__c</fullName>
        <label>Total Actual Incentive Value (FOC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TotalActualIncentiveValueOIK__c</fullName>
        <label>Total Actual Incentive (Other In Kind)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TotalActualIncentiveValueVoucher__c</fullName>
        <label>Total Actual Incentive Value (Voucher)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TotalIncentiveValue_OtherinKind__c</fullName>
        <label>Total Incentive Value (Other in Kind)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Actual_Incentive_Value__c</fullName>
        <label>Total Actual Incentive Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Actual_Incentive_Volume_9L__c</fullName>
        <label>Total Actual Incentive Volume (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Actual_Value__c</fullName>
        <label>Total Actual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Actual_Volume_9L__c</fullName>
        <label>Total Actual Volume (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Incentive_Value_Cash__c</fullName>
        <label>Total Incentive Value (Cash)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Incentive_Value_FOC__c</fullName>
        <label>Total Incentive Value (FOC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Incentive_Value_Voucher__c</fullName>
        <label>Total Incentive Value (Voucher)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Incentive_Value__c</fullName>
        <label>Total Incentive Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Incentive_Volume_9L__c</fullName>
        <label>Total Incentive Volume (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Target_Value__c</fullName>
        <label>Total Target Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Target_Volume_9L__c</fullName>
        <label>Total Target Volume (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Tasting</fullName>
                </value>
                <value>
                    <fullName>GWP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_A_P_Type__c</fullName>
        <label>A&amp;P Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Background_Color__c</fullName>
        <label>Background Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AliceBlue</fullName>
                </value>
                <value>
                    <fullName>AntiqueWhite</fullName>
                </value>
                <value>
                    <fullName>Aqua</fullName>
                </value>
                <value>
                    <fullName>Aquamarine</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Beige</fullName>
                </value>
                <value>
                    <fullName>Bisque</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>BlanchedAlmond</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>BlueViolet</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>BurlyWood</fullName>
                </value>
                <value>
                    <fullName>CadetBlue</fullName>
                </value>
                <value>
                    <fullName>Chartreuse</fullName>
                </value>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
                <value>
                    <fullName>Coral</fullName>
                </value>
                <value>
                    <fullName>CornflowerBlue</fullName>
                </value>
                <value>
                    <fullName>Cornsilk</fullName>
                </value>
                <value>
                    <fullName>Crimson</fullName>
                </value>
                <value>
                    <fullName>Cyan</fullName>
                </value>
                <value>
                    <fullName>DarkBlue</fullName>
                </value>
                <value>
                    <fullName>DarkCyan</fullName>
                </value>
                <value>
                    <fullName>DarkGoldenRod</fullName>
                </value>
                <value>
                    <fullName>DarkGray</fullName>
                </value>
                <value>
                    <fullName>DarkGreen</fullName>
                </value>
                <value>
                    <fullName>DarkGrey</fullName>
                </value>
                <value>
                    <fullName>DarkKhaki</fullName>
                </value>
                <value>
                    <fullName>DarkMagenta</fullName>
                </value>
                <value>
                    <fullName>DarkOliveGreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Channel__c</fullName>
        <label>Channel</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Color_Reference__c</fullName>
        <label>Color Reference</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_GL_Account_Code__c</fullName>
        <label>GL Account Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Promotion_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Promotion_Name_Chinese__c</fullName>
        <label>Promotion Name (Chinese)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Promotion_Name__c</fullName>
        <label>Promotion Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Promotion_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Responsible_By__c</fullName>
        <label>Responsible By</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Status__c</fullName>
        <label>Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Target_Venue__c</fullName>
        <label>Target Venue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Text_Color__c</fullName>
        <label>Text Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AliceBlue</fullName>
                </value>
                <value>
                    <fullName>AntiqueWhite</fullName>
                </value>
                <value>
                    <fullName>Aqua</fullName>
                </value>
                <value>
                    <fullName>Aquamarine</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Beige</fullName>
                </value>
                <value>
                    <fullName>Bisque</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>BlanchedAlmond</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>BlueViolet</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>BurlyWood</fullName>
                </value>
                <value>
                    <fullName>CadetBlue</fullName>
                </value>
                <value>
                    <fullName>Chartreuse</fullName>
                </value>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
                <value>
                    <fullName>Coral</fullName>
                </value>
                <value>
                    <fullName>CornflowerBlue</fullName>
                </value>
                <value>
                    <fullName>Cornsilk</fullName>
                </value>
                <value>
                    <fullName>Crimson</fullName>
                </value>
                <value>
                    <fullName>Cyan</fullName>
                </value>
                <value>
                    <fullName>DarkBlue</fullName>
                </value>
                <value>
                    <fullName>DarkCyan</fullName>
                </value>
                <value>
                    <fullName>DarkGoldenRod</fullName>
                </value>
                <value>
                    <fullName>DarkGray</fullName>
                </value>
                <value>
                    <fullName>DarkGreen</fullName>
                </value>
                <value>
                    <fullName>DarkGrey</fullName>
                </value>
                <value>
                    <fullName>DarkKhaki</fullName>
                </value>
                <value>
                    <fullName>DarkMagenta</fullName>
                </value>
                <value>
                    <fullName>DarkOliveGreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>ASI_CRM_SG_All_Ad_hoc_Trade_Promotions</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_CRM_Total_Incentive_Value__c</columns>
        <columns>ASI_CRM_Total_Incentive_Volume_9L__c</columns>
        <columns>ASI_CRM_Total_Target_Value__c</columns>
        <columns>ASI_CRM_Total_Target_Volume_9L__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Promotion__c.ASI_CRM_SG_Ad_hoc_Trade_Promotion,ASI_HK_CRM_Promotion__c.ASI_CRM_SG_Ad_hoc_Trade_Promotion_Read_Only</value>
        </filters>
        <label>All SG Ad-hoc Trade Promotions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_HK_CRM_All_National_Promotions</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Promotion_Name__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_HK_CRM_Promotion_Start_Date__c</columns>
        <columns>ASI_HK_CRM_Promotion_End_Date__c</columns>
        <columns>ASI_HK_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Promotion__c.ASI_HK_CRM_National</value>
        </filters>
        <label>All National Promotions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_HK_CRM_All_Tailor_Made_Promotions</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Promotion_Name__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_HK_CRM_Promotion_Start_Date__c</columns>
        <columns>ASI_HK_CRM_Promotion_End_Date__c</columns>
        <columns>ASI_HK_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Promotion__c.ASI_HK_CRM_Tailor_Made</value>
        </filters>
        <label>All Tailor-Made Promotions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Promotion_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_HK_CRM_Promotion_Start_Date__c</columns>
        <columns>ASI_HK_CRM_Promotion_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CRM_TH_Channel_Promotions</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Promotion_Name__c</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_HK_CRM_Promotion_Start_Date__c</columns>
        <columns>ASI_HK_CRM_Promotion_End_Date__c</columns>
        <columns>ASI_HK_CRM_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Promotion__c.ASI_TH_CRM_National,ASI_HK_CRM_Promotion__c.ASI_TH_CRM_Tailor_Made</value>
        </filters>
        <label>All TH Channel Promotions</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CRM_TW_Channel_Promotions</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Promotion_Name__c</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_HK_CRM_Promotion_Start_Date__c</columns>
        <columns>ASI_HK_CRM_Promotion_End_Date__c</columns>
        <columns>ASI_HK_CRM_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Promotion__c.ASI_CRM_TW_ChannelPromotion</value>
        </filters>
        <label>All TW Channel Promotions</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Promotion Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG</fullName>
        <active>true</active>
        <label>SG Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Ad_hoc_Trade_Promotion</fullName>
        <active>true</active>
        <label>SG Ad-hoc Trade Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Ad_hoc_Trade_Promotion_Read_Only</fullName>
        <active>true</active>
        <label>SG Ad-hoc Trade Promotion (Read-Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_ChannelPromotion</fullName>
        <active>true</active>
        <description>This is used by TW CRM</description>
        <label>TW Channel Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_TailorMadePromotion</fullName>
        <active>true</active>
        <description>This is used by TW CRM</description>
        <label>TW Tailor Made Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_National</fullName>
        <active>true</active>
        <label>National</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_Tailor_Made</fullName>
        <active>true</active>
        <label>Tailor Made</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_National</fullName>
        <active>true</active>
        <label>ASI TH CRM National</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Tailor_Made</fullName>
        <active>true</active>
        <label>ASI TH CRM Tailor Made</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ASI_CRM_SG_Promotion__c</fullName>
        <label>ASI_CRM_SG_Promotion</label>
    </sharingReasons>
    <validationRules>
        <fullName>ASI_CRM_SG_ValidateOtherChannels</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;ASI_CRM_SG&apos; &amp;&amp; LEN( TRIM(ASI_CRM_Other_Channels__c))&lt; 1 &amp;&amp;  INCLUDES(ASI_CRM_Channel__c, &apos;Others&apos;)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Other_Channels__c</errorDisplayField>
        <errorMessage>Please Specify Other Channels value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_TH_ValidateOutletTypeAndDetails</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;ASI_TH_CRM_National&apos; &amp;&amp; NOT(ISBLANK( ASI_CRM_Outlet_Type__c )) &amp;&amp; ( ASI_CRM_PromotionDetails__c&gt;0)</errorConditionFormula>
        <errorMessage>Cannot specify both Outlet Types and Target Outlets.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_TW_ValidateChannelAndDetails</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;ASI_CRM_TW_ChannelPromotion&apos; &amp;&amp; NOT(ISBLANK( ASI_CRM_Channel__c )) &amp;&amp; ( ASI_CRM_PromotionDetails__c&gt;0)</errorConditionFormula>
        <errorMessage>Cannot specify both Channels and Target Outlets.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_HK_CRM_EndDateShouldBeAfterStartDate</fullName>
        <active>true</active>
        <description>End date must be same or later than start date</description>
        <errorConditionFormula>ASI_HK_CRM_Promotion_End_Date__c &lt; ASI_HK_CRM_Promotion_Start_Date__c</errorConditionFormula>
        <errorMessage>End Date cannot be earlier than Start Date</errorMessage>
    </validationRules>
</CustomObject>